# pcstream

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  algorithm_8h.html  algorithm_8h.js  algorithm_8h__incl.dot  algorithm_8h_source.html  annotated.html  annotated_dup.js  buffer_8h.html  buffer_8h.js  buffer_8h__dep__incl.dot  buffer_8h__incl.dot  buffer_8h_source.html  bw__estimator_8h.html  bw__estimator_8h.js  bw__estimator_8h__dep__incl.dot  bw__estimator_8h__incl.dot  bw__estimator_8h_source.html  classes.html  classminiply_1_1PLYReader.html  def_8h.html  def_8h.js  def_8h__dep__incl.dot  def_8h__incl.dot  def_8h_source.html  dir_20382665da1ae6f8a12f99093b6a6904.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_ef3b2545113449f8f25e623a543d64e3.html  dir_fc66559d6087c67822ddd6f54919033e.html  dir_fc66559d6087c67822ddd6f54919033e.js  dir_fc66559d6087c67822ddd6f54919033e_dep.dot  (+113 more)
.github/workflows/: ci.yml
application/: CMakeLists.txt  genmpd.c  genmpd.h  http.c  pcs.c  request_handler.c  request_handler.h
assets/test/: hull.ply
assets/test/algorithm/: info.init.txt
cmake/: install-rules.cmake
cmake/dependencies/: filrg-pcc.cmake  mpeg-vpcc.cmake
dependencies/cmake/: google-draco.cmake  mpeg-vpcc.cmake
dependencies/mpeg-vpcc/patches/: replace.sh  tmc2-install.patch
docs/: Doxyfile.in
example/: CMakeLists.txt  hull.c  pcs_wasm.c  tmc2_decode.c
include/: ply.h  tmc2_decoder.h
include/pcstream/: algorithm.h  buffer.h  bw_estimator.h  def.h  gof.h  http.h  lod_selector.h  mesh.h  pcstream.h  point_cloud.h  request_handler.h  tmc2_decoder.h  vec2f.h  vec3f.h  video_decoder.h  viewport_estimator.h  visibility_computer.h
patches/: tmc2-install.patch
scripts/: replace.sh
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_4.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+8 more)
source/: algorithm.c  buffer.c  bw_estimator.c  def.cpp  gof.c  gof.cpp  http.c  lod_selector.c  mesh.c  pcstream.c  ply.cpp  point_cloud.cpp  request_handler.c  tmc2_decoder.cpp  video_decoder.cpp  viewport_estimator.c  visibility_computer.c
test/: CMakeLists.txt
test/source/: algorithm_test.c  buffer_test.c  bw_estimator_test.c  gof_test.c  http_test.c  lod_selector_test.c  mesh_test.c  pcstream_test.c  request_handler_test.c  utils.h  visibility_computer_test.c
